# determine source and header files
file(GLOB_RECURSE sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c *.cpp *.h *.hpp)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

LINK_DIRECTORIES(${BOOST_LIBRARY_DIRS})

ADD_EXECUTABLE( guarc
    ${sources}
)

TARGET_LINK_LIBRARIES(guarc ${BOOST_LIBRARIES})

INCLUDE_DIRECTORIES(guarc ${BOOST_INCLUDE_DIRS} )

