GET_SUBDIRECTORIES(_LIST_OF_PLUGINS ${CMAKE_CURRENT_SOURCE_DIR})

#FOREACH (_PLUGIN ${_LIST_OF_PLUGINS})
#    option (PLUGIN_${_PLUGIN} "Build module ${_PLUGIN}")
#ENDFOREACH (_PLUGIN)

FOREACH (_PLUGIN ${_LIST_OF_PLUGINS})
    SET(_PLUGIN_NAME PLUGIN_${_PLUGIN})
    IF (NOT ${_PLUGIN_NAME})
        MESSAGE(STATUS "Found plugin ${_PLUGIN}")
        option(PLUGIN_${_PLUGIN} "Build module ${_PLUGIN}")
    ELSE (NOT ${_PLUGIN_NAME})
        MESSAGE(STATUS "Building ${_PLUGIN}")
        add_subdirectory(${_PLUGIN})
    ENDIF (NOT ${_PLUGIN_NAME})
ENDFOREACH (_PLUGIN)
